clusters/cl01tl/manifests/kiwix/Deployment-kiwix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiwix
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: kiwix
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kiwix
    helm.sh/chart: kiwix-5.2.1
  namespace: kiwix
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: kiwix
      app.kubernetes.io/instance: kiwix
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: kiwix
        app.kubernetes.io/name: kiwix
    spec:
      enableServiceLinks: false
      serviceAccountName: kiwix
      automountServiceAccountToken: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - args:
            - '*.zim'
          image: ghcr.io/kiwix/kiwix-serve:3.8.2@sha256:de4d451d9d9e3e2d37c1a7b5a861698c67cc4c52c364c2a593ba554cddd6ce03
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          name: main
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            requests:
              cpu: 1m
              memory: 10Mi
          volumeMounts:
            - mountPath: /data
              name: media
              readOnly: true
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: kiwix-nfs-storage
