clusters/cl01tl/manifests/kiwix/Service-kiwix.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiwix
  labels:
    app.kubernetes.io/instance: kiwix
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kiwix
    app.kubernetes.io/service: kiwix
    helm.sh/chart: kiwix-5.2.1
  namespace: kiwix
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: kiwix
    app.kubernetes.io/name: kiwix
