clusters/cl01tl/manifests/kiwix/HTTPRoute-http-route-kiwix.yaml
---
# Source: kiwix/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-kiwix
  namespace: kiwix
  labels:
    app.kubernetes.io/name: http-route-kiwix
    app.kubernetes.io/instance: kiwix
    app.kubernetes.io/part-of: kiwix
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - kiwix.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: kiwix
          port: 80
          weight: 100
