clusters/cl01tl/manifests/kiwix/HTTPRoute-kiwix.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiwix
  labels:
    app.kubernetes.io/instance: kiwix
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kiwix
    helm.sh/chart: kiwix-5.2.1
  namespace: kiwix
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "kiwix.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kiwix
          namespace: kiwix
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
